Fixed a bug with horizontal scrolling on mobile

--- a/src/index.sass
+++ b/src/index.sass
@@ -24,7 +24,7 @@
     @apply drop-shadow-md text-small font-semibold max-xl:text-small-medium-screen
 
 html
-  overflow-hidden
+  overflow-x: hidden
 
 body
   font-family: 'Jost', sans-serif
